--- a/wordpress/wp-content/themes/mystile-child/custom.css
+++ b/wordpress/wp-content/themes/mystile-child/custom.css
@@ -97,11 +97,12 @@ text-align: left;
 }
 
 input.input-text{
-width: 1000px;
+width: 52%;
 position: relative;
-margin: 0;
-left: 20%;
-right: 20%;
+margin-left: 20%;
+text-align: center;
+
+
 }
 /* 
 DESKTOP STYLES
