Removed Bullet at Search Bar
made a change to the custom.css to remove the bullet next to the search
text box

--- a/wordpress/wp-content/themes/mystile-child/custom.css
+++ b/wordpress/wp-content/themes/mystile-child/custom.css
@@ -104,6 +104,12 @@ text-align: center;
 
 
 }
+
+/* Edits by RDP: remove the radio button next to the search bar */
+li {
+ display: block;
+}
+
 /* 
 DESKTOP STYLES
 -----------------
