Added custom 'Recent Data Uploads' and 'Featured'
Added custom shortcodes to Index.php

--- a/wordpress/wp-content/themes/mystile-child/custom.css
+++ b/wordpress/wp-content/themes/mystile-child/custom.css
@@ -108,11 +108,15 @@ li {
  display: block;
 }
 
-/* RDP change the add to cart button color GEOSTOREDITS */
+a.button {
+	color: white !important;
+}
+/* RDP change the add to cart button text color GEOSTOREDITS */
 a.button.add_to_cart_button.product_type_simple {
 	color: white !important;
 }
-/* RDP change the 'read more' button color GEOSTOREDITS */
+
+/* RDP change the 'read more' button text color GEOSTOREDITS */
 a.button.product_type_simple {
 	color: white !important;
 }
